--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,10 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     include(CheckCXXCompilerFlag)
     CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
     if (_cpp_latest_flag_supported)
-        add_compile_options("/std:c++latest")
+        add_compile_options("/std:c++latest /Wall /WX")
     endif()
 else()
-    set(CMAKE_CXX_FLAGS "--std=c++23 -Wall -Wextra -pedantic")
+    set(CMAKE_CXX_FLAGS "--std=c++23 -Wall -Wextra -pedantic -Werror -Wno-error=deprecated-declarations")
     set(COMPILER_DEBUG_FLAGS "-D_DEBUG")
     set(COMPILER_RELEASE_FLAGS "-O3 -DNDEBUG")
     set(LINKER_FLAGS "--std=c++23")
